# corl

./: .gitignore  EVAL_INTERFACE.md  README.md  STREAMING_ACT_SUMMARY.md  environment.yml  requirements.txt
bash/: common.sh  eval_act_braidedhub.sh  eval_act_h_shape.sh  eval_act_panda_route.sh  eval_metaworld_policy.sh  eval_policy.sh  eval_streaming_act_braidedhub.sh  eval_streaming_act_h_shape.sh  eval_streaming_act_panda_route.sh  prepare_metaworld_mt50_sipm_dataset.sh  start_deploy_compare.sh  train_act_braidedhub.sh  train_act_h_shape.sh  train_act_panda_route.sh  train_policy.sh  train_streaming_act_braidedhub.sh  train_streaming_act_h_shape.sh  train_streaming_act_panda_route.sh
benchmarks/: __init__.py  robocasa.py
data/: README.md  convert_dataset.py  convert_legacy_dataset_to_v30.py  convert_rosbag_to_lerobot.py  download_dataset.py  process_dataset.py  (+1 more)
policy/lerobot_policy_prism_diffusion/: pyproject.toml
policy/lerobot_policy_prism_diffusion/src/lerobot_policy_prism_diffusion/: __init__.py  configuration_diffusion.py  modeling_diffusion.py  prefix_dataset.py  processor_diffusion.py
policy/lerobot_policy_streaming_act/: pyproject.toml
policy/lerobot_policy_streaming_act/src/lerobot_policy_streaming_act/: __init__.py  configuration_act.py  configuration_streaming_act.py  modeling_act.py  modeling_streaming_act.py  prefix_image_cache.py  prefix_sequence.py  processor_act.py  processor_streaming_act.py  signature_cache.py
policy/lerobot_policy_streaming_act/src/lerobot_policy_streaming_act.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+164 files in other folders)
