[project]
name = "lerobot_policy_prism_diffusion"
version = "0.1.0"
description = "PRISM Diffusion policy package for LeRobot."
dependencies = [
    "lerobot",
]
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
